src/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  html,
  body {
    overflow-x: hidden;
    font-family: "Lato", sans-serif;
  }
  
  .df {
    display: flex;
  }
  
  .dn {
    display: none;
  }
  
  .db {
    display: block;
  }
  
  /* Todo Section start from here */
  .container {
    background: #5e4425;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    padding: 10px;
  }
  
  .todo-title {
    margin: 15px;
    font-size: 1.7rem;
  }
  
  .todo-title::after {
    content: "";
    width: 50px;
    display: block;
    margin: 10px auto;
    border-bottom: 2px solid #470255;
  }
  
  /* Add new todo form start form here */
  #todo-form {
    min-width: 100%;
    position: relative;
    margin-bottom: 10px;
  }
  
  .input-group {
    min-width: 100%;
    padding: 12px 15px;
    border: 1px solid transparent;
  }
  
  .input-group:focus-visible {
    outline-color: #a60ae4;
  }
  
  .invalid {
    color: #f55;
    border-color: #f55;
  }
  
  .invalid:focus-visible {
    outline-color: #f55;
  }
  
  .btn-submit {
    position: absolute;
    display: block;
    right: 15px;
    top: 8px;
    border: none;
    background: transparent;
  }
  
  .btn-submit img {
    width: 100%;
  }
  
  .btn-submit:active {
    transform: translateY(-2px);
  }
  
  /* Todo Items styles start from here */
  .todo-items-gropu {
    list-style: none;
    min-width: 100%;
  }
  
  .todo-item {
    width: 100%;
    display: flex;
    padding: 15px;
    cursor: move;
    column-gap: 10px;
    align-items: center;
  }
  
  .todo-item:nth-child(odd) {
    background: #7a0492;
  }
  
  .todo-completed {
    text-decoration: line-through;
    color: #de8cff;
  }
  
  #todo-compleate {
    cursor: pointer;
  }
  
  .todo-des {
    flex: 1;
  }
  
  .btn-three-dot {
    background: inherit;
    border: none;
    cursor: pointer;
  }
  
  .btn-clear-all {
    width: 100%;
    padding: 15px 15px;
    text-align: center;
    color: #a60ae4;
    font-weight: bold;
    margin-top: 10px;
    border: none;
    transition: all 0.05s ease-in-out;
  }
  
  .btn-clear-all:active {
    color: #de8cff;
  }
  
  /* Dinamic styles is start from here */
  .no-item {
    text-align: center;
    color: #a2ad06;
  }
  
  .show-msg {
    display: none;
  }
  
  .form-error {
    display: block;
    color: #f55;
    text-align: center;
  }
  
  .todo-box {
    flex: 1;
    width: 100%;
    background: transparent;
    color: #fff;
    padding: 10px;
    cursor: text;
    outline: none;
    border: 1px solid #de8cff;
    border-radius: 8px;
    max-height: 40px;
  }
  
  .delete-completed {
    background: white;
    border-color: transparent;
    cursor: pointer;
    padding: 1em;
    margin-top: 1em;
    font-size: 1.5em;
  }
  
  .delete-completed:hover {
    background: rgb(255, 174, 0);
    color: white;
  }
  
  .btn-delete:active {
    border-color: #de8cff;
  }
  
  .invalid-edit {
    color: #f55;
    border-color: #f55;
  }
  
  .invalid-edit:focus-visible {
    outline-color: #f55;
  }
  
  .todo-compleated {
    text-decoration: line-through;
    color: #de8cff;
  }
  

